quicklog/tests/failures/struct_missing_debug.stderr
error[E0277]: `SerializeStruct` doesn't implement `std::fmt::Debug`
  --> tests/failures/struct_missing_debug.rs:12:5
   |
12 |     info!(?s1, "struct does not implement Debug");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `SerializeStruct` cannot be formatted using `{:?}`
   |
   = help: the trait `std::fmt::Debug` is not implemented for `SerializeStruct`
   = note: add `#[derive(Debug)]` to `SerializeStruct` or manually `impl std::fmt::Debug for SerializeStruct`
   = note: this error originates in the macro `format_args` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `SerializeStruct` with `#[derive(Debug)]`
  --> tests/failures/../common/mod.rs
   |
   + #[derive(Debug)]
   |
